istio-secure-demo/k8s-configs/egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-pod-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kube-system: "true"
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          istio: system # Add labels to istio-system and istio-egress namespaces
          istio: egress
          ns: default
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          istio: system # Add labels to istio-system and istio-egress namespaces
          istio: ingress
          ns: default
